{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 48,
  "lineage": "f2cb39ff-5e19-9bf2-d4b0-83cff8af3fc8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f583708a55db1b45",
            "domain": "vpc",
            "id": "eipalloc-0f583708a55db1b45",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-36-81-128.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.81.128",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:870393486939:internet-gateway/igw-073865d187d6ee1d3",
            "id": "igw-073865d187d6ee1d3",
            "owner_id": "870393486939",
            "tags": {
              "Name": "bluerain_vpc_IGW"
            },
            "tags_all": {
              "Name": "bluerain_vpc_IGW"
            },
            "vpc_id": "vpc-00269a357a1b67377"
          },
          "dependencies": [
            "aws_vpc.bluerain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f583708a55db1b45",
            "association_id": "eipassoc-026a340dd1b554264",
            "connectivity_type": "public",
            "id": "nat-0c5774631df979f04",
            "network_interface_id": "eni-0df06edbb7cf3d09c",
            "private_ip": "10.10.10.29",
            "public_ip": "3.36.81.128",
            "subnet_id": "subnet-0e8a61546e3611363",
            "tags": {
              "Name": "NAT_gateway"
            },
            "tags_all": {
              "Name": "NAT_gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_subnet.public_subnet1",
            "aws_vpc.bluerain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_rt_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-092ed8c6113f672ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c5774631df979f04",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-092ed8c6113f672ee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet1",
            "aws_vpc.bluerain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:870393486939:route-table/rtb-092ed8c6113f672ee",
            "id": "rtb-092ed8c6113f672ee",
            "owner_id": "870393486939",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00269a357a1b67377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bluerain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:870393486939:route-table/rtb-0a9d92046b08c03ae",
            "id": "rtb-0a9d92046b08c03ae",
            "owner_id": "870393486939",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00269a357a1b67377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bluerain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b900b195e10d6a84",
            "route_table_id": "rtb-092ed8c6113f672ee",
            "subnet_id": "subnet-00ccdaf9e55f754fb"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet1",
            "aws_vpc.bluerain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cf516efadde3c6a",
            "route_table_id": "rtb-092ed8c6113f672ee",
            "subnet_id": "subnet-063d5bb468dded8ce"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet2",
            "aws_vpc.bluerain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb09a16de1b4799f",
            "route_table_id": "rtb-0a9d92046b08c03ae",
            "subnet_id": "subnet-0e8a61546e3611363"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet1",
            "aws_vpc.bluerain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075689564ea60d117",
            "route_table_id": "rtb-0a9d92046b08c03ae",
            "subnet_id": "subnet-0c5afbe94c8c97f54"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet2",
            "aws_vpc.bluerain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:870393486939:subnet/subnet-00ccdaf9e55f754fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ccdaf9e55f754fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870393486939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet1"
            },
            "tags_all": {
              "Name": "private_subnet1"
            },
            "vpc_id": "vpc-00269a357a1b67377"
          },
          "dependencies": [
            "aws_vpc.bluerain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:870393486939:subnet/subnet-063d5bb468dded8ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063d5bb468dded8ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870393486939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet2"
            },
            "tags_all": {
              "Name": "private_subnet2"
            },
            "vpc_id": "vpc-00269a357a1b67377"
          },
          "dependencies": [
            "aws_vpc.bluerain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:870393486939:subnet/subnet-0e8a61546e3611363",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8a61546e3611363",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870393486939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet1"
            },
            "tags_all": {
              "Name": "public_subnet1"
            },
            "vpc_id": "vpc-00269a357a1b67377"
          },
          "dependencies": [
            "aws_vpc.bluerain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:870393486939:subnet/subnet-0c5afbe94c8c97f54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5afbe94c8c97f54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870393486939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet2"
            },
            "tags_all": {
              "Name": "public_subnet2"
            },
            "vpc_id": "vpc-00269a357a1b67377"
          },
          "dependencies": [
            "aws_vpc.bluerain_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bluerain_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:870393486939:vpc/vpc-00269a357a1b67377",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-099a54d4794a96f0f",
            "default_route_table_id": "rtb-0d2e3efcae5a54d3d",
            "default_security_group_id": "sg-033f3178b16324390",
            "dhcp_options_id": "dopt-57e2fc3f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00269a357a1b67377",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2e3efcae5a54d3d",
            "owner_id": "870393486939",
            "tags": {
              "Name": "bluerain_vpc"
            },
            "tags_all": {
              "Name": "bluerain_vpc"
            }
          }
        }
      ]
    }
  ]
}